docs/cyclonedds-cxx/0.8.2/_sources/ddscxx_api_docs/program_listing_file__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_data_Space.idl.rst.txt

.. _program_listing_file__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_data_Space.idl:

Program Listing for File Space.idl
==================================

|exhale_lsh| :ref:`Return to documentation for file <file__home_vsts_work_1_s_repos_cyclonedds-cxx_src_ddscxx_tests_data_Space.idl>` (``/home/vsts/work/1/s/repos/cyclonedds-cxx/src/ddscxx/tests/data/Space.idl``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: idl

   
   module Space {
       enum Enumeration
       {
           VALUE1,
           VALUE2
       };
   
       struct Type1 {
       long    long_1; //@Key
       long    long_2;
       long    long_3;
       };
   #pragma keylist Type1 long_1
       struct Type2 {
       long    long_1; //@Key
       long    long_2;
       long    long_3;
       Enumeration enum_1;
       };
   #pragma keylist Type2 long_1
   };
